# LocalWan

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  package.json  tsconfig.json  turbo.json
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/api/src/api/: config.py  main.py
apps/api/src/api/middleware/: auth.py  rate_limit.py
apps/api/src/api/models/: __init__.py  auth.py  credits.py  generation.py
apps/api/src/api/routes/: auth.py  credits.py  generation.py
apps/api/src/api/services/: replicate_service.py
apps/web/: .env.example  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/public/: manifest.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/auth/login/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/templates/: page.tsx
apps/web/src/lib/: prompt-templates.ts
